Fix img alignment

--- a/styles/partials/sections.scss
+++ b/styles/partials/sections.scss
@@ -745,6 +745,7 @@
 }
 
 .partners-info {
+  display: flex;
   position: relative;
   align-items: center;
   margin-left: 50px;
@@ -768,7 +769,6 @@
   }
 
   img {
-    display: none;
     width: 80px;
 
     &.logo-color{
@@ -817,7 +817,6 @@
 
       &.logo-gray {
         width: 100%;
-        padding: 7px;
       }
     }
 
@@ -826,7 +825,6 @@
 
       &.logo-gray {
         width: 100%;
-        padding: 7px;
       }
     }
   }
